deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-sales-ingress
  namespace: tp-microservices
  annotations:
    # Augmente le timeout à 5 minutes (300 secondes)
    traefik.ingress.kubernetes.io/router.timeout: "300s"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
